<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bot_image"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_icon" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/selamat_datang_di_mila"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:translationY="-30dp" />

        <TextView
            android:id="@+id/welcome_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_medium"
            android:padding="8dp"
            android:text="@string/welcome_description"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:translationY="-30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/daftar_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_outline"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_filled"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
