<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/MILA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extrabold"
        android:padding="16dp"
        android:text="@string/mila"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/daftar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/daftar_desc"
            android:textAlignment="center"
            android:textColor="@color/login_desc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.example.mila.ui.costumview.EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/edit_text_outline"
            android:ems="10"
            android:fontFamily="@font/nunito_medium"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.example.mila.ui.costumview.EditTextEmail
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/edit_text_outline"
            android:ems="10"
            android:fontFamily="@font/nunito_medium"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <com.example.mila.ui.costumview.EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_outline"
                android:ems="10"
                android:fontFamily="@font/nunito_medium"
                android:inputType="textPassword"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/daftar_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_filled"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito"
                android:text="@string/sudah_punya_akun"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/masukAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/nunito"
                android:text="@string/masuk"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
