<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/milaChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/iconamoon_profile_circle_fill"
        app:layout_constraintStart_toStartOf="@+id/milaChat"
        app:layout_constraintTop_toBottomOf="@+id/milaChat" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="User Name"
        android:layout_marginStart="14dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#ECECEC"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appInfo" />


    <TextView
        android:id="@+id/aboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="About the App"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/appInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Info"
        app:layout_goneMarginStart="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:textSize="16dp"
        android:fontFamily="@font/nunito"
        app:layout_constraintBottom_toBottomOf="@+id/icInfo"
        app:layout_constraintStart_toEndOf="@+id/icInfo"
        app:layout_constraintTop_toTopOf="@+id/icInfo" />

    <ImageView
        android:id="@+id/icInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutApp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/nunito"
        android:text="Help"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icHelp"
        app:layout_constraintStart_toEndOf="@+id/icHelp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/icHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_outline_red"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/sign_out"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#EF4444"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:background="@color/white"
        android:contentDescription="@string/icon_edit"
        android:src="@drawable/ic_edit"
        android:layout_marginEnd="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userName" />

</androidx.constraintlayout.widget.ConstraintLayout>